--- a/teste_02.html
+++ b/teste_02.html
@@ -5,41 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Teste</title>
-    <style>
-        h1 {
-            color: blue;
-            font-size: 15px;
-        }
-        a {
-            color: green;
-            font-size: 30px;
-        }
-        img {
-            width: 200px;
-        }
-        li {
-            font-weight: bold;
-            color: blueviolet;
-        }
-    </style>
+    <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <h1>Titulo da Página</h1>
+    <h1 id="titulo">Titulo da Página</h1>
     <h2>Sub-titulo da página</h2>
-    <p>Um paragrafo qualquer</p><br>
+    <p class="texto">Um paragrafo qualquer</p><br>
+    <div></div>
     <a href="https://www.google.com.br">Google</a><br>
     <img src="https://www.google.com.br/logos/google.jpg" alt="Logo do Google"><br>
     <button>Clique aqui</button>
     <h3>Lista desordenada</h3>
     <ul>
         <li>item 1</li>
-        <li>item 2</li>
+        <li class="texto">item 2</li>
         <li>item 3</li>
     </ul>
     <h3>Lista ordenada</h3>
     <ol>
         <li>item 1</li>
-        <li>item 2</li>
+        <li class="texto">item 2</li>
         <li>item 3</li>
         <li>Item 4</li>
     </ol>
