--- a/teste_02.html
+++ b/teste_02.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Teste</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="estilo_01.css">
 </head>
 <body>
     <h1 id="titulo">Titulo da Página</h1>
